# Manga_Reader

./: .gitignore  Camera.h  LICENSE  ManngaBook.cpp  ManngaBook.h  ManngaPages.h  ManngaReader.sln  ManngaReader.vcxproj  ManngaReader.vcxproj.filters  Markdown.md  Project.code-workspace  README.md  README_CN.md  README_EN.md  README_JP.md  main.cpp  toolsForMannga.cpp  toolsForMannga.h
Note/src/: main.cpp
Project/: CMakeLists.txt
Project/dot/: CountSourceLines.ps1  CountSourceLines.txt  GenerateIncludesGraph.ps1  class.ps1  includes.dot  inheritance.dot
Project/include/: Camera.hpp  DATA.hpp  Input.hpp  MangaReader.hpp  ManngaBook.hpp  ManngaPages.hpp
Project/src/: IO.cpp  ImgPrinter.cpp  Input.cpp  MangaBook.cpp  Reader.cpp  Volume.cpp  main.cpp
